gl51-master/src/test/deca/context/valid/testObject_rule3_40bis.deca
//Description
// test instanceof
// Résultat :
// oui

class A {}
{
    if(null instanceof A){println("non");}
    else {println("oui");}
}