gl51-master/src/test/deca/context/invalid/test_rule0_1.deca
// Description:
// identifiant non déclaré

{
    println(a); //a non déclaré
    //PASSED
}